// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsApply displays habitat link for eligibility requirements when listing is habitat and is open 1`] = `
<DocumentFragment>
  <div
    class="md:px-0 px-2"
  >
    <section
      class="aside-block fcfs-bmr-how-to-apply"
    >
      <h4
        class="text__underline-weighted"
      >
        How to Apply
      </h4>
      <div
        class="text-sm text-gray-750"
      >
        <div
          class="fcfs-bmr-how-to-apply__list"
        >
          <ol
            class="numbered-list text-black text-base"
          >
            <li>
              Fill out PDF application
            </li>
            <li>
              Gather documents
            </li>
            <li>
              When you are ready, submit application
            </li>
          </ol>
        </div>
        <button
          class="button is-primary w-full"
          tabindex="0"
        >
          Learn more and apply
        </button>
      </div>
    </section>
    <section
      class="aside-block "
    >
      <h4
        class="text__underline-weighted"
      >
        Need Help?
      </h4>
      <div
        class="text-sm text-gray-750"
      >
        <a
          class="button w-full transition"
          href="https://www.homeownershipsf.org/buyerapplications/"
          target="_blank"
        >
          Visit HomeownershipSF
        </a>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsApply does not render if listing is closed 1`] = `<DocumentFragment />`;

exports[`ListingDetailsApply renders if listing is open 1`] = `
<DocumentFragment>
  <div
    class="md:px-0 px-2"
  >
    <section
      class="aside-block fcfs-bmr-how-to-apply"
    >
      <h4
        class="text__underline-weighted"
      >
        How to Apply
      </h4>
      <div
        class="text-sm text-gray-750"
      >
        <div
          class="fcfs-bmr-how-to-apply__list"
        >
          <ol
            class="numbered-list text-black text-base"
          >
            <li>
              Fill out PDF application
            </li>
            <li>
              Gather documents
            </li>
            <li>
              When you are ready, submit application
            </li>
          </ol>
        </div>
        <button
          class="button is-primary w-full"
          tabindex="0"
        >
          Learn more and apply
        </button>
      </div>
    </section>
    <section
      class="aside-block "
    >
      <h4
        class="text__underline-weighted"
      >
        Need Help?
      </h4>
      <div
        class="text-sm text-gray-750"
      >
        <a
          class="button w-full transition"
          href="https://www.homeownershipsf.org/buyerapplications/"
          target="_blank"
        >
          Visit HomeownershipSF
        </a>
      </div>
    </section>
    <section
      class="aside-block "
    >
      <h4
        class="text__underline-weighted"
      >
        Expected move-in date
      </h4>
      <div
        class="text-sm text-gray-750"
      >
        June 2020
      </div>
    </section>
  </div>
</DocumentFragment>
`;
